- Made ScrollToPoint, SaveScrollPoint, RestoreScrollPoint virtual - PdfToolBar: Hide overflow grip - PdfToolBar: Add CreateToggleButton Uri overload - PdfToolBarZoomEx: Added new zoom levels - SearchBar: Adjusted xaml display

--- a/ToolBars/SearchBar.xaml
+++ b/ToolBars/SearchBar.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d">
     <Border Name="pnlBorder">
         <StackPanel Orientation="Horizontal" Height="32">
-            <Button Name="picMenu" Click="picMenu_Click" Padding="0" Width="32" Height="32">
+            <Button Name="picMenu" Click="picMenu_Click" Padding="0" Width="32" Height="32"  Margin="2,0,2,0">
                 <Button.Content>
                     <Image Width="32" Height="32" Source="pack://application:,,,/Patagames.Pdf.Wpf;component/Resources/menu.png"/>
                 </Button.Content>
@@ -30,13 +30,13 @@
                     </ContextMenu>
                 </Button.ContextMenu>
             </Button>
-            <Border BorderBrush="Black" Background="White" BorderThickness="1" Padding="5,0,5,0">
+            <Border BorderBrush="Black" Background="White" BorderThickness="0.5" Padding="5,0,5,0"  Margin="2,0,2,0">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <TextBox Background="White" BorderThickness="0" Name="tbSearch" TextChanged="tbSearch_TextChanged" Width="120"></TextBox>
                     <TextBlock Name="lblInfo">1 of 1</TextBlock>
                 </StackPanel>
             </Border>
-            <Button Name="picUp" Click="picUp_Click" Width="32" Height="32">
+            <Button Name="picUp" Click="picUp_Click" Width="32" Height="32"  Margin="2,0,2,0">
                 <Image Width="32" Height="32" Source="pack://application:,,,/Patagames.Pdf.Wpf;component/Resources/up.png">
                     <Image.Style>
                         <Style TargetType="Image">
@@ -49,7 +49,7 @@
                     </Image.Style>
                 </Image>
             </Button>
-            <Button Name="picDown" Click="picDown_Click" Width="32" Height="32">
+            <Button Name="picDown" Click="picDown_Click" Width="32" Height="32"  Margin="2,0,2,0">
                 <Image Width="32" Height="32" Source="pack://application:,,,/Patagames.Pdf.Wpf;component/Resources/down.png">
                     <Image.Style>
                         <Style TargetType="Image">
